# csvdiff-cli

./: README.md  setup.cfg
csvdiff/: aggregator.py  anonymizer.py  binner.py  bucketer.py  capper.py  caster.py  classifier.py  cli.py  cli_aggregate.py  cli_anonymize.py  cli_bin.py  cli_bucket.py  cli_classify.py  cli_condense.py  cli_drift.py  cli_excel.py  cli_flatten.py  cli_group.py  cli_html.py  cli_interpolate.py  cli_join.py  cli_latex.py  cli_outlier.py  cli_patch.py  cli_profile.py  cli_rank.py  cli_replace.py  cli_roll.py  cli_sample.py  cli_scale.py  cli_schema.py  cli_sentinel.py  cli_sequence.py  cli_shrink.py  cli_sort.py  cli_split.py  cli_stack.py  cli_tag.py  cli_transform.py  cli_transpose.py  (+71 more)
docs/: anonymization.md  binning.md  capping.md  classification.md  comparison.md  correlation.md  deduplication.md  diffing.md  extraction.md  flattening.md  fuzzy_matching.md  highlighting.md  html_export.md  imputation.md  joining.md  merging.md  outlier_detection.md  profiling.md  rolling.md  sampling.md  sentinel.md  summarization.md  table_format.md  tagging.md  validation.md
tests/: test_aggregator.py  test_anonymizer.py  test_binner.py  test_bucketer.py  test_capper.py  test_caster.py  test_classifier.py  test_cli.py  test_cli_aggregate.py  test_cli_anonymize.py  test_cli_bin.py  test_cli_bucket.py  test_cli_classify.py  test_cli_condense.py  test_cli_excel.py  test_cli_flatten.py  test_cli_group.py  test_cli_html.py  test_cli_interpolate.py  test_cli_join.py  test_cli_outlier.py  test_cli_profile.py  test_cli_replace.py  test_cli_roll.py  (+77 more)
