[metadata]
name = csvdiff-cli
version = 0.1.0
description = A command-line tool for diffing and reconciling large CSV files
long_description = file: README.md
long_description_content_type = text/markdown
author = csvdiff contributors
license = MIT
python_requires = >=3.8

[options]
packages = csvdiff

[options.entry_points]
console_scripts =
    csvdiff = csvdiff.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov

[tool:pytest]
testpaths = tests
addopts = --tb=short -q

[coverage:run]
source = csvdiff
branch = true

[coverage:report]
show_missing = true
fail_under = 80
